--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,60 +3,69 @@
     <mat-toolbar-row>
         <span>Tabla de Libros</span>
         <span class="example-spacer"></span>
-        <mat-icon class="example-icon">favorite</mat-icon>
-        <mat-icon class="example-icon">delete</mat-icon>
+        <p class="counter">Libros Registrados : {{ServiceBooks.librosCount}}</p>
+        <mat-icon class="delete-icon">delete</mat-icon>
     </mat-toolbar-row>
 
 </mat-toolbar>
 
-<mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
-</mat-form-field>
+<div class="control-wrapper">
+
+    <button mat-raised-button (click)="modalOpen()">Agregar</button>
+
+    <mat-form-field>
+        <input (input)="ServiceBooks.filtro = $event.target.value" (keyup)="ServiceBooks.filtrar().subscribe()" matInput placeholder="buscar">
+    </mat-form-field>
+
+</div>
 
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+<table mat-table [dataSource]="ServiceBooks.libros" class="mat-elevation-z8">
+
 
     <!-- Position Column -->
     <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        <td mat-cell *matCellDef="let element">
+            <p>{{element.nombre}}</p>
+        </td>
     </ng-container>
 
     <!-- Name Column -->
+    <ng-container matColumnDef="autor">
+        <th mat-header-cell *matHeaderCellDef> Autor </th>
+        <td mat-cell *matCellDef="let element">
+            <p>{{element.autor}}</p>
+        </td>
+    </ng-container>
+
+    <!-- Weight Column -->
     <ng-container matColumnDef="editorial">
         <th mat-header-cell *matHeaderCellDef> Editorial </th>
         <td mat-cell *matCellDef="let element"> {{element.editorial}} </td>
     </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="autor">
-        <th mat-header-cell *matHeaderCellDef> autor </th>
-        <td mat-cell *matCellDef="let element"> {{element.autor}} </td>
-    </ng-container>
-
     <!-- Symbol Column -->
     <ng-container matColumnDef="edicion">
-        <th mat-header-cell *matHeaderCellDef> edicion </th>
+        <th mat-header-cell *matHeaderCellDef> Edicion </th>
         <td mat-cell *matCellDef="let element"> {{element.edicion}} </td>
     </ng-container>
-
-    <!-- Remove Column -->
+    <!-- Symbol Column -->
     <ng-container matColumnDef="remove">
-        <th mat-header-cell *matHeaderCellDef> Borrar </th>
-        <td mat-cell *matCellDef="let element"> <i (click)="remove(element.nombre)" class="material-icons">
-            close
-        </i> </td>
+        <th mat-header-cell *matHeaderCellDef> Remover </th>
+        <td mat-cell *matCellDef="let element"> <i class="material-icons cursor " (click)="ServiceBooks.eliminarLibro(element.nombre)">close</i> </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
+
+
 </table>
 
 
-<div class="button-wrapper">
+<div *ngIf="!ServiceBooks.librosCount" (click)="modalOpen()" class=" mensaje-arr-vacio ">
 
-    <button mat-mini-fab color="accent" mat-button (click)="Add(); remove();">+</button>
+    <h2>Agrega el Primer Registro</h2>
 
 </div>
-
-<app-modal></app-modal>
