--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,8 @@
 
 </mat-toolbar>
 
+<mat-progress-bar mode="indeterminate" color="warn" *ngIf="ServiceBooks.loading"></mat-progress-bar>
+
 <div class="control-wrapper">
 
     <button mat-raised-button (click)="modalOpen()">Agregar</button>
@@ -55,7 +57,9 @@
     <!-- Remover-->
     <ng-container matColumnDef="remove">
         <th mat-header-cell *matHeaderCellDef> Remover </th>
-        <td mat-cell *matCellDef="let element"> <i class="material-icons cursor " (click)="ServiceBooks.eliminarLibro(element.nombre)">close</i> </td>
+        <td mat-cell *matCellDef="let element">
+            <div class="d-flex justify-content-center"><i class="material-icons cursor " (click)="confirmationOpen(element.nombre)">close</i></div>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
@@ -68,5 +72,15 @@
 <div *ngIf="!ServiceBooks.librosCount" (click)="modalOpen()" class=" mensaje-arr-vacio ">
 
     <h2>Agrega el Primer Registro</h2>
+
+</div>
+
+<div class="switcher d-flex align-items-center">
+
+    <span class="mr-4">Local DB</span>
+
+    <mat-slide-toggle [(ngModel)]="checked" (change)="switch()" [color]="color" [checked]="checked" [disabled]="disabled"></mat-slide-toggle>
+
+    <span class="ml-4">FireBase</span>
 
 </div>
